# SaaS

./: .env.example  .gitignore  README.md  docker-compose.yml  start.sh
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  test.db
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260504_0001_auth_tenant_init.py  20260506_0002_domain_blocks_flats_relations.py  20260506_0003_flat_unique_active_only.py  20260507_0004_billing_core_init.py  20260508_0005_plans_and_allocations_init.py  20260512_0006_notifications_init.py  20260512_0007_scheduled_charges_init.py  20260513_0008_installment_plans_init.py  3769c02911f3_add_announcements_and_maintenance_.py  4da41bf2f29e_add_announcements_and_maintenance_.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  deps.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  announcement.py  block.py  charge.py  charge_plan.py  flat.py  installment_plan.py  maintenance_request.py  notification.py  payment.py  payment_allocation.py  resident_flat_relation.py  scheduled_charge.py  site.py  user.py
apps/api/app/schemas/: __init__.py  analytics.py  announcement.py  auth.py  (+16 more)
apps/api/tests/: conftest.py  test_analytics.py  test_auth.py  test_blocks.py  test_bulk.py  test_charge_plans.py  test_charges.py  test_flats.py  test_health.py  test_installments.py  test_ledger.py  test_notifications.py  test_payment_allocations.py  test_payments.py  test_reports.py  test_resident_portal.py  test_resident_relations.py  test_user_mgmt.py
(+67 files in other folders)
