[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "site-yonetim-api"
version = "0.1.0"
description = "FastAPI backend for Site/Apartman Yonetim SaaS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "pydantic-settings>=2.3.4,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "email-validator>=2.2.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.5.5,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
